Remove the 'snx' from the action name

--- a/Apps/phslashnextphishingincidentresponse/display_api_quota.html
+++ b/Apps/phslashnextphishingincidentresponse/display_api_quota.html
@@ -101,7 +101,7 @@ div.mainCont h2 {font-size: 14px !important; line-height: 20px !important;}
 			<!-- API Quota section -->
 			<h2 class="mb-10">SlashNext Phishing Incident Response - API Quota</h2>
 
-			<h3 class="mb-5">action = snx api quota</h3>
+			<h3 class="mb-5">action = api quota</h3>
 			<h3 class="mb-5">Coming soon…</h3>
 
 		</section>
