--- a/Apps/phslashnextphishingincidentresponse/display_host_urls.html
+++ b/Apps/phslashnextphishingincidentresponse/display_host_urls.html
@@ -103,7 +103,7 @@ div.mainCont h2 {font-size: 14px !important; line-height: 20px !important;}
 			<!-- Host Report section -->
 			<h2 class="mb-10">SlashNext Phishing Incident Response - Host URLs</h2>
 
-			<h3 class="mb-5">action = snx host urls</h3>
+			<h3 class="mb-5">action = host urls</h3>
 			<h3 class="mb-5">host = {{result.param.host}}</h3>
 
 			{% if result.data.errorNo == 0 %} <!-- Host report success condition -->
