--- a/Apps/phslashnextphishingincidentresponse/display_text.html
+++ b/Apps/phslashnextphishingincidentresponse/display_text.html
@@ -103,7 +103,7 @@ div.mainCont h2 {font-size: 14px !important; line-height: 20px !important;}
 			<!-- Download Text section -->
 			<h2 class="mb-10">SlashNext Phishing Incident Response - Download Text</h2>
 
-			<h3 class="mb-5">action = snx download text</h3>
+			<h3 class="mb-5">action = download text</h3>
 			<h3 class="mb-5">scan id = {{result.param.scanid}}</h3>
 
 			{% if result.data.errorNo == 0 %} <!-- Download text success condition -->
