--- a/Apps/phslashnextphishingincidentresponse/display_host_report.html
+++ b/Apps/phslashnextphishingincidentresponse/display_host_report.html
@@ -103,7 +103,7 @@ div.mainCont h2 {font-size: 14px !important; line-height: 20px !important;}
 			<!-- Host Reputation section -->
 			<h2 class="mb-10">SlashNext Phishing Incident Response - Host Report</h2>
 
-			<h3 class="mb-5">action = snx host report</h3>
+			<h3 class="mb-5">action = host report</h3>
 			<h3 class="mb-5">host = {{result.param.host}}</h3>
 
 			{% if result.data %} <!-- Host reputation request condition -->
