--- a/Apps/phslashnextphishingincidentresponse/display_scan_report.html
+++ b/Apps/phslashnextphishingincidentresponse/display_scan_report.html
@@ -103,7 +103,7 @@ div.mainCont h2 {font-size: 14px !important; line-height: 20px !important;}
 			<!-- Scan Report section -->
 			<h2 class="mb-10">SlashNext Phishing Incident Response - Scan Report</h2>
 
-			<h3 class="mb-5">action = snx scan report</h3>
+			<h3 class="mb-5">action = scan report</h3>
 			<h3 class="mb-5">scan id = {{result.param.scanid}}</h3>
 
 			{% if result.data %} <!-- URL scan report request condition -->
