--- a/Apps/phslashnextphishingincidentresponse/display_url_scan_sync.html
+++ b/Apps/phslashnextphishingincidentresponse/display_url_scan_sync.html
@@ -103,7 +103,7 @@ div.mainCont h2 {font-size: 14px !important; line-height: 20px !important;}
 			<!-- Scan Report section -->
 			<h2 class="mb-10">SlashNext Phishing Incident Response - URL Scan Sync</h2>
 
-			<h3 class="mb-5">action = snx url scansync</h3>
+			<h3 class="mb-5">action = url scansync</h3>
 			<h3 class="mb-5">url = {{result.param.url}}</h3>
 
 			{% if result.data %} <!-- URL scan report request condition -->
